--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+    .container{
+        background-color: #2C2B2B;
+
+    }
+
+@media screen and (min-width: 752px){
+    .container{
+        background-color: #f1f1f1;
+
+    }
+}
+
+
+/* Mobile viewports */
