--- a/src/components/dropdown/dropdown.css
+++ b/src/components/dropdown/dropdown.css
@@ -1,12 +1,12 @@
-
-
 .dropdown{
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 300px;
+    user-select: none;
     align-items: center;
-    justify-content: center;
+    background-color: var(--main-cl);
+    border-radius: 5px;
 }
 .dropdownBtn{
     display: flex;
@@ -14,21 +14,41 @@
     justify-content: space-between;
     color: rgb(88, 88, 88);
     padding: 10px;
-    background-color: aliceblue;
     font-weight: bold;
-    box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, .6);
+    border-radius: 5px;
+    margin: 4px;
+    cursor: pointer;
+    transition: all .1s ease-in;
+    box-shadow: 2px 2px 10px 0px rgba(48, 48, 48, 0.6);
+}
+
+.dropdownBtn:hover{
+    box-shadow: none;
+
 }
 
 .dropdownContent{
-    /* position: absolute; */
-    width: 500px;
+    position: absolute;
+    width: 100px;
+    margin-top: 40px;
+    border-radius: 15px;
+    border: .2px solid gray;
+    top: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: rgb(88, 88, 88);
-    background-color: aliceblue;
+    background-color: var(--main-cl);
 }
 
 .dropdownItem {
-    
+    padding: 8px;
+    cursor: pointer;
+    transition: all .2s ease-in;
+    width: 100%;
+}
+
+.dropdownItem:hover{
+    border-radius: 15px;
+    background-color: blanchedalmond;
 }
