--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,19 @@
   position: absolute;
   top: 1;
   background-color: red;
-  
+}
+
+.navbar{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+.avatar {
+    width: 50px;
+    height: 50px;
+    margin-right: 50px;
 }
 /* main app */
 .app{
@@ -64,6 +76,72 @@ input{
   color: var(--main-cl);
   text-transform: uppercase;
   font-size: 20px;
+}
+
+/* MAIN CONTENT */
+
+.main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-content{
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 20px;
+    border-radius: 15px;
+    border: 1px solid rgb(89, 89, 89);
+}
+
+.label{
+    color: rgb(185, 185, 185);
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+.bottom-container {
+    margin-top: 10px;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--main-cl);
+    width: 300px;
+    border-radius: 5px;
+}
+.counter-container{
+    display: flex;
+    align-items: center;
+    width: 100px;
+    border-radius: 5px;
+    justify-content: space-between;
+    margin: 10px 0;
+    transition: all .1s ease-in;
+    padding: 0 5px;
+}
+
+.count{
+    padding: 0 10px;
+    font-size: 25px;
+    cursor: pointer;
+}
+.icon{
+    /* font-size: 20px; */
+    cursor: pointer;
+    opacity: .5;
+}
+.icon:hover{
+    opacity: .9;
+}
+.liters{
+    /* font-size: 14px; */
+    color: rgb(47, 47, 47);
+    margin: 0 10px;
 }
 @media screen and (min-width: 752px){
   .nav {
