--- a/css/styles.css
+++ b/css/styles.css
@@ -41,10 +41,13 @@
   /* align-items: center; */
     width: 100vw;
     /* background-color: var(--main-bg-cl); */
-    /* min-height: 100vh; */
+    min-height: 100vh;
+}
+.header {
+    color: var(--main-bg-cl);
 }
 .wrapper{
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
@@ -52,16 +55,16 @@
   padding: 20px 0;
   border-radius: 40px;
   width: 100vw;
-  background-color: var(--secondary-bg-cl);
+  background-color: var(--secondary-bg-cl); */
 }
 
 .content{
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
     color: var(--default-cl);
     padding: 10px;
-    height: 100%;
+    height: 100%; */
 }
 .label{
   
@@ -143,6 +146,68 @@ input{
     color: rgb(47, 47, 47);
     margin: 0 10px;
 }
+.dropdown{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    user-select: none;
+    align-items: center;
+    background-color: var(--main-cl);
+    border-radius: 5px;
+}
+.dropdown-btn{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: rgb(88, 88, 88);
+    padding: 10px;
+    font-weight: bold;
+    border-radius: 5px;
+    margin: 4px;
+    cursor: pointer;
+    transition: all .1s ease-in;
+}
+
+.dropdown-btn:hover{
+    box-shadow: 2px 2px 10px 0px rgba(48, 48, 48, 0.6);
+}
+
+.dropdown-content{
+    position: absolute;
+    width: 100px;
+    margin-top: 40px;
+    border-radius: 15px;
+    border: .2px solid gray;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: rgb(88, 88, 88);
+    background-color: var(--main-cl);
+}
+
+.dropdown-item {
+    padding: 8px;
+    cursor: pointer;
+    transition: all .2s ease-in;
+    width: 100%;
+}
+
+.dropdown-item:hover{
+    border-radius: 15px;
+    background-color: blanchedalmond;
+}
+.hide {
+    display: none;
+}
+.arrow{
+    width: 20px;
+    height: 20px;
+    object-fit: cover;
+    padding: 2px;
+    margin: 5px
+}
 @media screen and (min-width: 752px){
   .nav {
     position: absolute;
@@ -159,10 +224,16 @@ input{
     justify-content: center;
     align-items: center;
     width: 100vw;
-    background: white;
+    /* background: white; */
     background-color: var(--primary--desktop-bg);
     min-height: 100vh;
   }
+    .header {
+        color: var(--main-bg-cl);
+        padding: 10px;
+        background-color: var(--main-cl);
+        border-bottom: .2px solid gray;
+    }
   .wrapper{
     display: flex;
     flex-direction: column;
@@ -181,7 +252,7 @@ input{
     padding: 10px;
     height: 100%;
     }
-.mainContent{
+.main-content{
     margin: 5px;
     display: flex;
     flex-direction: column;
@@ -193,6 +264,3 @@ input{
     border: 1px solid rgb(89, 89, 89);
 }
 }
-
-
-/* Mobile viewports */
