--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,11 @@ input{
   text-transform: uppercase;
   font-size: 20px;
 }
-
+.sub-title{
+  color: var(--main-cl);
+  text-transform: uppercase;
+  font-size: 15px;
+}
 /* MAIN CONTENT */
 
 .main{
@@ -158,6 +162,7 @@ input{
 }
 .dropdown-btn{
     display: flex;
+    text-align: center;
     align-items: center;
     justify-content: space-between;
     color: rgb(88, 88, 88);
@@ -175,12 +180,12 @@ input{
 
 .dropdown-content{
     position: absolute;
-    width: 100px;
+    width: 300px;
     margin-top: 40px;
-    border-radius: 15px;
-    border: .2px solid gray;
+    border-radius: 5px;
     top: 0;
     display: flex;
+    text-align: center;
     flex-direction: column;
     align-items: center;
     color: rgb(88, 88, 88);
