--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Source+Code+Pro&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -12,6 +12,10 @@
   --secondary-bg-cl: #484646;
   --tertiary-bg-cl: rgb(117, 115, 115);
   --primary--desktop-bg: rgb(182, 182, 182);
+}
+
+html {
+    font-family: 'PT Sans', sans-serif;
 }
 canvas{
     background-color: #ffffff62;
@@ -48,6 +52,23 @@ canvas{
 }
 .header {
     color: var(--main-bg-cl);
+}
+.logo{
+    font-size: 40px;
+    background-color: #2C2B2B;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all .2s ease-in;
+}
+.logo:hover{
+    background-color: transparent;
+    text-shadow: 1px 2px 3px;
+    border: 1px solid gray;
+}
+.f{
+    color:#F0A45E
 }
 .wrapper{
   /* display: flex;
@@ -156,16 +177,6 @@ input{
     margin-bottom: 10px;
     margin-top: 20px;
 }
-.bottom-container {
-    margin-top: 10px;
-    color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--main-cl);
-    width: 300px;
-    border-radius: 5px;
-}
 .counter-container{
     display: flex;
     align-items: center;
@@ -199,7 +210,7 @@ input{
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 100px;
     user-select: none;
     align-items: center;
     /* background-color: var(--main-cl); */
@@ -222,12 +233,13 @@ input{
 }
 
 .dropdown-btn:hover{
+    color: black;
    background-color: #ffcb9a;
 }
 
 .dropdown-content{
     position: absolute;
-    width: 300px;
+    width: 100px;
     margin-top: 40px;
     border-radius: 5px;
     top: 0;
@@ -268,6 +280,9 @@ input{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+.user-amount{
+    border-bottom: .2px solid gray;
 }
 .name{
     color: white;
@@ -465,3 +480,12 @@ input{
 .button:hover{
     background-color: rgb(86, 86, 86);
 }
+
+.fuel-selection{
+    color: lightgray;
+}
+
+.fuel-selection:hover{
+    color: black;
+}
+
